--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 
     "start": "NODE_ENV=production nodemon server/server.js",
 
-    "build": "NODE_ENV=production webpack",
+    "build": "NODE_ENV=production webpack --config webpack.config.js",
 
-    "dev": "NODE_ENV=development webpack-dev-server --open & npm start"
+    "dev": "NODE_ENV=development webpack serve & npm start"
 
   },
 
