--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 
     "test": "echo \"Error: no test specified\" && exit 1",
 
-    "start": "NODE_ENV=production nodemon server/server.js",
+    "start": "NODE_ENV=production nodemon server/server.js" ,
 
-    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "build": "NODE_ENV=production webpack  --config webpack.config.js",
 
-    "dev": "NODE_ENV=development webpack serve & npm start"
+    "dev": "NODE_ENV=development webpack serve & nodemon server/server.js"
 
   },
 
@@ -60,6 +60,8 @@
 
     "react-router-dom": "^5.2.0",
 
+    "watch": "^1.0.2",
+
     "webpack": "^5.30.0"
 
   },
@@ -73,6 +75,8 @@
     "babel-loader": "^8.2.2",
 
     "css-loader": "^5.2.0",
+
+    "mini-css-extract-plugin": "^1.4.0",
 
     "mongoose": "^5.12.3",
 
