--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
 
     "react": "^17.0.2",
 
+    "react-audio-player": "^0.16.1",
+
     "react-dom": "^17.0.2",
 
     "react-router-dom": "^5.2.0",
@@ -77,6 +79,8 @@
     "babel-loader": "^8.2.2",
 
     "css-loader": "^5.2.0",
+
+    "file-loader": "^6.2.0",
 
     "mini-css-extract-plugin": "^1.4.0",
 
