--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "\"trivia game\"",
     "main": "main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "NODE_ENV=production nodemon server/server.js",
         "build": "NODE_ENV=production webpack  --config webpack.config.js",
         "dev": "NODE_ENV=development webpack serve && nodemon ./server/server.js",
@@ -38,17 +38,25 @@
     "devDependencies": {
         "@babel/core": "^7.13.14",
         "@babel/preset-env": "^7.13.12",
+        "@testing-library/jest-dom": "^5.12.0",
+        "@testing-library/react": "^11.2.6",
+        "@testing-library/react-hooks": "^5.1.2",
         "babel-loader": "^8.2.2",
         "concurrently": "^6.1.0",
         "cors": "^2.8.5",
         "css-loader": "^5.2.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "enzyme-to-json": "^3.6.2",
         "file-loader": "^6.2.0",
+        "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.4.0",
         "mongoose": "^5.12.3",
         "path": "^0.12.7",
         "sass": "^1.32.8",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
+        "test-data-bot": "^0.8.0",
         "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^3.11.2"
     }
