--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.6",
         "@testing-library/react-hooks": "^5.1.2",
+        "axe-core": "^4.2.0",
         "babel-loader": "^8.2.2",
         "concurrently": "^6.1.0",
         "cors": "^2.8.5",
@@ -53,9 +54,11 @@
         "mini-css-extract-plugin": "^1.4.0",
         "mongoose": "^5.12.3",
         "path": "^0.12.7",
+        "regenerator-runtime": "^0.13.7",
         "sass": "^1.32.8",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
+        "supertest": "^6.1.3",
         "test-data-bot": "^0.8.0",
         "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^3.11.2"
